Base station - added code that didn't fix the issue